2008-11-07 TualatriX <tualatrix@gmail.com>
	
	* pulog/models.py: Added the get_admin_url method for post. 
	* pulog/views.py: Changed the view of single-post.

2008-11-03 TualatriX <tualatrix@gmail.com>

	* pulog/admin.py, models.py: Removed the relation between Media and
	Post.
	* pulog/views/utils.py, pulog/urlspy: Added the upload view and url.
	* pulog/templates/utils/upload.html: Added the upload html for common
	admin use.

2008-11-02 TualatriX <tualatrix@gmail.com>

	* pulog/templatetags/menu.py: Fixed the filter for menu(static page).
	* pulog/urls.py, pulog/models.py: Apply the permalink(Post, Category
	and Comment.

2008-10-30 TualatriX <tualatrix@gmail.com>
	
	* media/: Integrated media to pulog models.
	* dynamic_media_serve: Remove dynamic_media_serve to
	pulug.media_serve.
	* pulog/models.py, admin.py, managers.py, views: Modified form
	django.contri.comments, use GenericRelation to Post.

2008-10-30 TualatriX <tualatrix@gmail.com>

	* dynamic_media_serve: Add for new media serve.
	* media/utils.py: Removed.
	* media/models.py: Upload path to use %Y/%m.
	* pulog/urls.py: Modified it to satisfield to dynamic_media_serve.

2008-10-24 TualatriX <tualatrix@gmail.com>
	
	* media/views.py, __init__.py, utils.py, models.py: Added
	the Media model to store upload media.
	* pulog/static/upload
	pulog/static/upload/thumb: Added two folders to store the upload
	media.
	* pulog/admin.py, media.py: Make the admin together.

2008-10-23 TualatriX <tualatrix@gmail.com>
	
	* pulog/urls.py: Cleaned up the urls and use the variable import from
	settings.py.
	* demo/settings.py: Added an new variable TEMPLATE_ROOT to hold
	template root folder.
	* demo/urls.py: Cleaned up the urls.

2008-10-16 TualatriX <tualatrix@gmail.com>

	* pulog/models.py: Modified the relation between Post and Category
	ManyToMany.
	* pulog/templates/imtx/post/title.html: Modified the Post's categoy
	display behavior. 
	* pulog/templates/imtx/post/archive.html: Fixed an typo.
